--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="container">
     <h1>Agenda de Citas</h1>
     <form id="appointment-form">
-      <input type="text" id="name" placeholder="Nombre del Cliente/Descripción" required>
+      <input type="text" id="name" placeholder="Nombre Cliente/Descripción" required>
       <input type="date" id="date" required>
       <input type="time" id="time" required>
       <button type="submit">Guardar</button>
