correcciones de las observaciones

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <div class="header">
     <img src="logo.jpg" alt="Logo de la Empresa" class="header-logo">
-    <h1 class="header-title">SARA PAZ NAILS AND MAKEUP</h1>
-    <p class="header-subtitle">Tu belleza es nuestra prioridad</p>
+    <h1 class="header-title">SARA PAZ, NAILS AND MAKEUP</h1>
+    <p class="header-subtitle">Tu belleza es nuestra prioridad.</p>
   </div>
 
   <button id="dark-mode-toggle">Modo Oscuro</button>
